--- a/cv.html
+++ b/cv.html
@@ -5,9 +5,12 @@
 	<title>Jessica DAUNAY</title>
 </head>
 <body>
-<img src="../photocv.png" alt="Mon image"/> 
+<img src="../photocv.png" alt="Mon image"/>
+
 	<h1>Développeur Logiciel</h1>
+
 	<p>Compétences</p>
+
 	<ul>
 		<li>Langage C</li>
 		<li>Python</li>
@@ -21,6 +24,7 @@
 	</ul>
 
 	<p>Expériences</p>
+
 	<ul>
 		<li>2016 - Stage en réseau informatique</li>
 		<li>2014 - 2015 Stage en maintenance informatique</li>
@@ -29,16 +33,19 @@
 	</ul>
 
 	<p>formations et diplômes</p>
+
 	<ul>
 		<li>2016 formation développeur logiciel à l'IMIE du Mans</li>
 		<li>2015 formation AFPA Technicienne d'assistance en informatique au Mans</li>
 		<li>2003 Brevet des collèges</li>
 	</ul>
 
-	<p></p>
+	<p>Intérêts</p>
 
-
-
+	<ul>
+		<li>Krav-Maga</li>
+		<li>l'informatique</li>
+	</ul>
 
 </body>
 
