petite modif formulaire

--- a/formulaire.html
+++ b/formulaire.html
@@ -18,23 +18,31 @@
 
 <label form "monPrenom">prénom: </label>
 <input type="text" 
-       name="monNom"
+       name="monPrenom"
        id="monPrenom"
-       placeholder="Jacques" />
+       placeholder="Jacques"/>
 <br/>
 <br/>
 
 <textarea name="" id="" cols="30" rows="10" placeholder= "Ecrire du texte"></textarea> <br/>
+<br/>
 
 <input type="submit" value="valider">
 <input type="reset" value="reset">
+
+<br/>
+
 <input type="range" min="0" max="10" spet="2" name="">
 <br/>
+
 
 <select name="">
 <option value="Renault">Renault</option>
 <option value="Peugeot">Peugeot</option>
 <option value="Opel">Opel</option>
+<option value="lexus">Lexus</option>
+<option value="Mercedes">Mercedes</option>
+<option value="Audi">Audi</option>
 </select>
 
 </form>
